# DwarfGameEngine

./: .gitignore  CMakeLists.txt  Glossary  TODO List.txt  imgui.ini  main.cpp  vcpkg.json
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
DwarfEngine/: DwarfCamera.cpp  DwarfCamera.h  DwarfEngine.cpp  DwarfEngine.h  DwarfEntityManager.cpp  DwarfEntityManager.h  DwarfInput.cpp  DwarfInput.h  DwarfThreading.cpp  DwarfThreading.h  DwarfTransform.cpp  DwarfTransform.h  DwarfTransfrom.cpp  EngineThreading.cpp  MeshManager.cpp  MeshManager.h  TextureManager.cpp  TextureManager.h
DwarfFileLoader/: DwarfIterativeOBJParser.cpp  DwarfIterativeOBJParser.h  DwarfOBJLoader.cpp  DwarfOBJLoader.h  OBJLoader.cpp  OBJLoader.h  OptimizedOBJLoader.cpp  OptimizedOBJLoader.h
DwarfGL/: DwarfShader.cpp  DwarfShader.h  ShaderProgramCode.cpp  ShaderProgramCode.h
DwarfGL/Mesh/: DwarfMesh.cpp  DwarfMesh.h  DwarfMesh2D.cpp  DwarfMesh2D.h  Mesh.cpp  Mesh.h  VirtualObject.cpp  VirtualObject.h
DwarfMisc/: DwarfPath.h  DwarfPublicStructs.h  Memory.cpp  Memory.h  PublicEnums.h  TestCode.cpp  TestCode.h
DwarfModels/BinaryFiles/: bear.json
DwarfModels/OBJFiles/: Cube
DwarfStb/: DwarfGetImage.cpp  DwarfGetImage.h
Engine/: Camera.cpp  Camera.h  EngineThreading.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  IMGUIClass.cpp  IMGUIClass.h  Input.cpp  Input.h  MeshManager.cpp  MeshManager.h
FileLoader/: IterativeOBJParser.cpp  IterativeOBJParser.h  OBJLoader.cpp  OBJLoader.h
GL/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderProgramCode.cpp  ShaderProgramCode.h  VirtualObject.cpp  VirtualObject.h
GL/Mesh/: Mesh.h  VirtualObject.h
Managers/: EntityManager.cpp  EntityManager.h  LightEntityManager.cpp  LightEntityManager.h  MeshManager.cpp  MeshManager.h  ShadowManager.cpp  ShadowManager.h  TextureManager.cpp  TextureManager.h  ThreadManager.cpp  ThreadManager.h
Message/: EntityMessage.h  MeshMessage.cpp  MeshMessage.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h
Misc/: LightVariables.h  Memory.cpp  Memory.h  Path.h  PublicEnums.h  PublicStructs.h  TestCode.h
Models/low-poly-dwarf-warrior-rigged/: Dwarf.mtl
Physics/: Physics.cpp  Physics.h  PhysicsVariables.h
ShaderScripts/: FragmentShader.glsl  VertexShader.glsl
ShaderScripts/Light/: LightingFragmentShader.frag  LightingVertexShader.vert
ShaderScripts/Misc/: FragmentShader.frag  FragmentShader.glsl  VertexShader.glsl  VertexShader.vert
ShaderScripts/Shadow/: SimpleDepthShader.frag  debug_quad.vert  debug_quad_depth.frag
Stb/: GetImage.cpp  GetImage.h
Threads/: ThreadManager.cpp  ThreadManager.h  ThreadPool.cpp  ThreadPool.h  ThreadQueue.cpp  ThreadQueue.h
